--- a/WinFormsApp/WinFormsApp.csproj
+++ b/WinFormsApp/WinFormsApp.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EfCoreSystemTextJsonBugTest\EfCoreSystemTextJsonBugTest.csproj" />
+    <ProjectReference Include="..\ClassLibrary\ClassLibrary.csproj" />
   </ItemGroup>
 
 </Project>
